--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.12.1",
     "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.33",
+    "lucide-react": "^0.544.0",
     "mammoth": "^1.10.0",
+    "motion": "^12.23.12",
     "next": "15.5.3",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -35,6 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
