--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@google/generative-ai": "^0.24.1",
+    "@mui/material": "^7.3.2",
     "@supabase/supabase-js": "^2.57.4",
+    "@tabler/icons-react": "^3.34.1",
     "axios": "^1.12.1",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -20,14 +24,16 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.33",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "mammoth": "^1.10.0",
     "motion": "^12.23.12",
     "next": "15.5.3",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
-    "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-mui-sidebar": "^1.6.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
